--- a/src/styles/Liga.css
+++ b/src/styles/Liga.css
@@ -2,10 +2,15 @@
     display: flex;
     padding: 4px 8px;
     align-items: flex-start;
+    
+    gap: 8px;
+}
+
+.headline p {
+    margin: 0;
     font-family: Verdana;
     font-size: 18px;
     font-weight: 700;
-    gap: 8px;
 }
 
 .team {
